change categories text to button

--- a/assignment4/categories.html
+++ b/assignment4/categories.html
@@ -7,7 +7,7 @@
 	
 	<ul>
 		<li ng-repeat="category in categoriesCtrl.categories" ui-sref="items({ category: category.short_name })">
-			<h3>({{ category.short_name }}) {{ category.name }}</h3>
+			<button>({{ category.short_name }}) {{ category.name }}</button>
 		</li>
 	</ul>
 </div>
